# wpp-server

./: .gitignore  Cargo.toml  Dockerfile  README.md
shared/: Cargo.toml
shared/src/: lib.rs  models.rs
shared/src/api/: chat.rs  media.rs  message.rs  user.rs  websocket.rs
shared/src/models/: chat.rs  chat_message.rs  chat_user.rs  user.rs
src/: announcer.rs  api.rs  jwt.rs  main.rs  models.rs  mongodb.rs  redis.rs
src/api/: chat.rs  media.rs  message.rs  user.rs  websocket.rs
src/models/: chat.rs  chat_message.rs  user.rs
