[package]
name = "wpp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { features = ["macros", "compress-gzip", "compress-brotli", "compress-zstd"], default-features = false, version = "4.9.0" }
actix-ws = "0.3.0"
anyhow = { default-features = false, version = "1.0.95" }
bcrypt = { features = ["std"], default-features = false, version = "0.17.0" }
bincode = "1.3.3"
chrono = { default-features = false, version = "0.4.39" }
dotenv = "0.15.0"
futures-util = "0.3.31"
jsonwebtoken = { default-features = false, version = "9.3.0" }
mongodb = "3.2.0"
redis = { version = "0.28.2", features = ["tokio-comp"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = "1.43.0"
uuid = "1.13.1"

shared = { path = "./shared" }

[build]
rustflags = ["-Z", "threads=8"]

[workspace]
members = [
  "shared"
]
