[package]
name = "wpp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { features = ["macros", "compress-gzip", "compress-brotli", "compress-zstd"], default-features = false, version = "4.9.0" }
actix-ws = "0.3.0"
anyhow = { default-features = false, version = "1.0.95" }
bcrypt = { features = ["std"], default-features = false, version = "0.17.0" }
chrono = { default-features = false, version = "0.4.39" }
dotenv = "0.15.0"
futures-util = "0.3.31"
jsonwebtoken = { default-features = false, version = "9.3.0" }
mongodb = "3.2.0"
redis = { version = "0.28.2", features = ["tokio-comp"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = "1.43.0"
uuid = "1.13.1"

shared = { path = "./shared" }
actix-cors = "0.7.0"
mediasoup = "0.19"
actix-multipart = "0.7.2"
actix-files = "0.6.6"
async-fs = "2.1.3"

[build]
rustflags = ["-Z", "threads=8"]

[workspace]
members = [
  "shared"
]
